[package]
name = "jwt-validator"
version = "0.1.0"
edition = "2024"

[dependencies]
aiway-plugin = { path = "../../aiway/lib/aiway-plugin", version = "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
http = "1"
bincode = "1.3"

[lib]
crate-type = ["cdylib"]
