[package]
name = "rewrite-path"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin = { path = "../../lib/plugin" }
protocol = { path = "../../lib/protocol" }
serde = { version = "1", features = ["derive"] }
regex = "1.11"


[lib]
name = "rewrite_path_plugin"
crate-type = ["cdylib"]
path = "src/lib.rs"