[package]
name = "rewrite-path"
version = "0.1.1"
edition = "2024"

[dependencies]
aiway-plugin = { path = "../../aiway/lib/aiway-plugin", version = "0.3.0" }
http = "1"
bincode = "1.3"
regex = "1.11"
serde = { version = "1", features = ["derive"] }


[lib]
name = "rewrite_path"
crate-type = ["cdylib"]
path = "src/lib.rs"

